# LMA

./: .env.template  .gitignore  PRIVACY.md  README.md  SECURITY.md  local-monitor-agent.spec  macos_entitlements.plist  pyproject.toml  release-public.key  requirements.txt  structure.txt  version_info.txt
.github/workflows/: build.yml
data/: categories.json
docs/: CODE_SIGNING.md  DEPLOYMENT_GUIDE.md  GITHUB_RELEASE_SIGNING.md  LOCAL_AGENT_OVERVIEW.md  PILOT_CHECKLIST.md  USER_GUIDE.md  release-manifest.example.json
docs/PLAN/: PHASE_13_PLAN.md  PLAN.md
docs/SIGNED/: ALL_PLATFORMS_COMPLETE.md  CODE_SIGNING_ALL_PLATFORMS.md  CODE_SIGNING_QUICK_START.md  SIGNING_AND_CONSOLE_FIX.md
docs/SUMMARY/: SUMMARY_1.md  SUMMARY_2.md  SUMMARY_3.md  SUMMARY_4.md  SUMMARY_5.md  SUMMARY_6.md
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  create_certificate.ps1  generate_categories.py  health_check.py  install_windows.bat  install_windows.ps1  sign_linux.sh  sign_macos.sh  sign_update_manifest.py  sign_windows.bat  sign_windows.ps1  test_self_signed_verification.ps1  trust_certificate.ps1  uninstall_windows.bat  verify_windows_signature.ps1
src/: agent_core.py  config.py  main.py
src/categorization/: categorizer.py
tests/: test_agent_core.py  test_api_sender.py  test_app_collector.py  test_autostart.py  test_categorizer.py  test_cli.py  test_credential_store.py  test_gui.py  test_hardening.py  test_network_collector.py  test_packaging.py  test_platform.py  test_session_manager.py  test_sqlite_buffer.py  test_tray.py  test_update_signing.py  test_updater.py
(+18 files in other folders)
